# lyric-display-app

./: .gitignore  AGENTS.md  API.md  BIBLE_LOGIC_AND_PERFORMANCE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  INSTALLATION.md  OFF_SCREEN_BACKGROUND_IMPLEMENTATION.md  PERFORMANCE_PROPOSAL.md  README.md  binding.gyp  file.txt  freeshowapi.md  index.html  jsconfig.json  main.js  man.js  model-usage.html  package-lock.json  package.json  preload.js  vite.config.js  vitest.config.js  vitest.setup.js
.antigravitycli/: bfd53641-26a3-4e9f-b996-e2a04c64d9b7.json
.impeccable/: design.json
cpp-core/: CMakeLists.txt  LineSplitting.cpp  LineSplitting.hpp  LyricsParsing.cpp  LyricsParsing.hpp  test_runner.cpp
docs/: asyncapi.yaml  openapi.yaml  performance-audit.md  performance-implementation-log.md  split-line-delay-fix.md
lyricdisplay-ndi/: package-lock.json
main/: adminKey.js  backend.js  cleanup.js  displayDetection.js  displayManager.js  fileHandler.js  inAppBrowser.js  ipc.js  loadingWindow.js  logger.js  menuBridge.js  ndiManager.js  providerCredentials.js  secureTokenStore.js  setlistExport.js  singleInstance.js  startup.js  systemFonts.js  themePreferences.js  updater.js  userPreferences.js  userTemplates.js  windows.js
plans/: keyboard-shortcuts-tanstack-agent-read.html  keyboard-shortcuts-tanstack-agent-read.md  keyboard-shortcuts-tanstack-user-read.html  keyboard-shortcuts-tanstack-user-read.md  rccgtphb-settings-plan.html  rccgtphb-settings-plan.md  show-bible-version-agent-read.html  show-bible-version-agent-read.md  show-bible-version-user-read.html  (+7 more)
(+220 files in other folders)
